Agrego seccion Tikects

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">       
           <nav class="navbar navbar-expand-lg navbar-dark bg-secondary">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand" href="index.html">
                     <img src="img/codoacodo.png" alt="" width="70" height="50" class="d-inline-block align-text-top">  
                     Conf Bs As                  
                 </a>                
@@ -32,10 +32,10 @@
                             <a class="nav-link" href="#">El lugar y la fecha</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link">Conviertete en orador</a>
+                            <a class="nav-link" href="#">Conviertete en orador</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active">Comprar tickets</a>
+                            <a class="nav-link active" href="tickets.html">Comprar tickets</a>
                         </li>
                         
                     </ul>
